// 这个就是protobuf的中间文件

// 指定的当前proto语法的版本，有2和3
syntax = "proto3";

// 指定等会文件生成出来的package
option go_package="./;pb";

// 定义request model
message VerifyTokenRequest{
  string token = 1; // 1代表顺序
}

// 定义response model
message VerifyTokenResponse{
  string UserID = 1;
}

// 定义response model
message FreeTokenResponse{
}
// 定义服务主体
service TokenService{
  // 定义方法
  rpc VerifyToken(VerifyTokenRequest) returns(VerifyTokenResponse);
  rpc FreeToken(VerifyTokenRequest) returns(FreeTokenResponse);
}